# WiSpine

./: .gitignore  README.md  pyproject.toml
data/: README.md
papers/: main.tex  maintest.tex  reference.bib
papers/body/: chap02.tex  chap03.tex  chap05.tex  conclusion_project.tex  discussion.tex  experiment.tex  features.tex  implementation.tex  intro.tex  reference.tex  reference_project.tex  related.tex
papers/preface/: cover.tex
papers/setup/: format.tex
scripts/: evaluate_file_classifier.py  evaluate_tcn.py  generate_paper_figures.py  inspect_csi.py  train_file_classifier.py  train_tcn.py
src/wispine/: __init__.py  csi.py  dataset.py  features.py  models.py
tests/: test_package.py
