[project]
name = "wispine"
version = "0.1.0"
description = "WiFi CSI based spine detection research project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "csikit>=2.5",
    "h5py>=3.14.0",
    "joblib>=1.4.0",
    "matplotlib>=3.10.0",
    "numpy>=1.26,<2",
    "pandas>=2.2.0",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
